selfhost/test/typechecker/match/error_unfilled_holes.1.out
Error at %FILE_NAME%:1:9
Could not determine type for assignment
  |  val x = match 123 {
             ^
Type '<unknown>?' has unfilled holes. Please use an explicit type annotation to denote the type
